--- a/testing/tests/simple-test/simple-test-terminal-deps.yaml
+++ b/testing/tests/simple-test/simple-test-terminal-deps.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
     name: simple-test-svc
+    annotations:
+        com.shieldsbetter.pelton/ingress: ":80"
 spec:
     selector:
         app: simple-test-{{{PELTON_RUN}}}-app
