Initial npm publish toward testing `vagrant-publish`

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@shieldsbetter/pelton4",
+  "name": "@shieldsbetter/pelton",
   "version": "0.0.1",
   "description": "",
   "main": "pelton.js",
