--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shieldsbetter/pelton",
-  "version": "0.0.12",
+  "version": "0.0.13",
   "description": "",
   "main": "pelton.js",
   "scripts": {
@@ -13,7 +13,6 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "boxen": "^7.0.0",
     "chalk": "^5.2.0",
     "cliclopts": "^1.1.1",
     "cson": "^7.20.0",
@@ -23,6 +22,7 @@
     "log-update": "^5.0.1",
     "minimist": "^1.2.7",
     "mustache": "^4.2.0",
+    "term-size": "^3.0.2",
     "zx": "^7.1.1"
   },
   "devDependencies": {
