Fix #1: envVars are now appropriately passed to plugins

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
-/node_modules/
 /.vagrant/
+/coverage/
+/node_modules/
 /*.box
 
 # zx does some wacky things sometimes
 /vagrant-publish*.mjs
-/restartCalicoAsNeeded?*
+/vagrant-bins/restartCalicoAsNeeded?*
