Added printProjectManifest as an alternative to printProjectDirectory for dependencies, toward being able to wget manifests from the web.

--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
   "name": "@shieldsbetter/pelton",
-  "version": "0.0.19",
+  "version": "0.0.21",
   "description": "Development environment orchestration tool.",
   "author": "Hampton Smith",
-
-  "keywords": ["dev", "development", "devtool", "microk8s", "vagrant"],
+  "keywords": [
+    "dev",
+    "development",
+    "devtool",
+    "microk8s",
+    "vagrant"
+  ],
   "homepage": "https://github.com/shieldsbetter/pelton",
   "repository": "github:shieldsbetter/pelton",
   "bugs": {
     "url": "https://github.com/shieldsbetter/pelton/issues"
   },
   "license": "ISC",
-
   "main": "pelton.js",
   "scripts": {
     "test": "sbtest testing/tests/*.mjs"
